[package]
name = "servicefile"
version = "0.1.0"
authors = ["Aneesh Durg <aneeshdurg17@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/aneeshdurg/servicefile"
repository = "https://github.com/aneeshdurg/servicefile"
description = "A rust crate for parsing /etc/services"
keywords = ["services", "linux"]
categories = ["parsing", "os"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
mktemp = "0.4.0"
